Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
-        /* Style for custom menu card in Modal */
+        /* Style for custom menu card in Modal (retained) */
         .matcha-menu-card, .coffee-menu-card, .smoothie-menu-card {
             display: flex;
             justify-content: space-between;
@@ -38,7 +38,7 @@
         .price-coffee { color: #7c2d12; font-weight: 700; }
         .price-smoothie { color: #0284c7; font-weight: 700; }
         
-        /* QR Placeholder Style (Adjusted for image size) */
+        /* QR Image Container Style */
         .qr-image-container {
             width: 256px;
             height: 256px;
