--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="flex justify-center flex-col items-center p-2 bg-white border border-gray-100 rounded-xl shadow-lg mb-4">
                 
                 <div class="qr-image-container my-4">
-                    <img src="https://raw.githubusercontent.com/khamphi880-boop/Order-Menu/main/170464.jpg" 
+                    <img src="https://raw.githubusercontent.com/khamphi880-boop/Order-Menu/c9af72f12e59972d1bed7b54fc7ab6831bd56952/176464.jpg" 
                          alt="Krungthai PromptPay QR Code" 
                          class="w-full h-full object-contain mx-auto">
                 </div>
@@ -382,7 +382,7 @@
             qrPaymentModal.classList.remove('hidden');
         }
 
-        // --- All Modal render functions ---
+        // --- All Modal render functions (omitted for brevity) ---
         
         function showFruitSmoothieModal() {
             renderFruitSmoothieMenu();
