--- a/index.html
+++ b/index.html
@@ -223,35 +223,35 @@
 
         // *** Menu Data (Full lists) *** (ใช้ข้อมูลเดิมทั้งหมด)
         const menuData = [
-            { id: 1, name: 'เผือก', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 2, name: 'แคนตาลูป', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 3, name: 'นมสด', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 4, name: 'นมน้ำผึ้ง', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 5, name: 'นมวานิลลา', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 6, name: 'นมคาราเมล', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 7, name: 'นมเย็น/นมชมพู', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 8, name: 'นมบราวน์ชูการ์', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 9, name: 'นมสด งาดำ', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 10, name: 'นมมิ้นท์', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 11, name: 'โกโก้', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 12, name: 'นมมิ้นท์โกโก้', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 13, name: 'ช็อกโกแลต', prices: { '16 Oz.': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
-            { id: 14, name: 'นมมิ้นท์ช็อก', prices: { '16 Oz.': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
-            { id: 15, name: 'นมสดโอริโอ้', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 60 } },
-            { id: 16, name: 'นมกล้วย', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 60 } },
-            { id: 17, name: 'กล้วยช็อก', prices: { '16 Oz.': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
-            { id: 18, name: 'กล้วยโกโก้', prices: { '16 Oz.': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
+            { id: 1, name: 'เผือก', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 2, name: 'แคนตาลูป', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 3, name: 'นมสด', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 4, name: 'นมน้ำผึ้ง', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 5, name: 'นมวานิลลา', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 6, name: 'นมคาราเมล', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 7, name: 'นมเย็น/นมชมพู', prices: { '16 Oz.เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 8, name: 'นมบราวน์ชูการ์', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 9, name: 'นมสด งาดำ', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 10, name: 'นมมิ้นท์', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 11, name: 'โกโก้', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 12, name: 'นมมิ้นท์โกโก้', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 13, name: 'ช็อกโกแลต', prices: { '16 Oz. เย็น': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
+            { id: 14, name: 'นมมิ้นท์ช็อก', prices: { '16 Oz. เย็น': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
+            { id: 15, name: 'นมสดโอริโอ้', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 60 } },
+            { id: 16, name: 'นมกล้วย', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 60 } },
+            { id: 17, name: 'กล้วยช็อก', prices: { '16 Oz. เย็น': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
+            { id: 18, name: 'กล้วยโกโก้', prices: { '16 Oz. เย็น': 40, '22 Oz. เย็น': 50, '22 Oz. ปั่น': 65 } },
             { id: 19, name: 'มะพร้าวนมสด', prices: { '22 Oz. ปั่น': 55 } },
-            { id: 20, name: 'ชาไทย (ไต้หวัน)', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 21, name: 'ชาไทย (ใบชา)', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 22, name: 'ชาไทย ลาเต้ มะพร้าว', prices: { '16 Oz.': 45, '22 Oz. เย็น': 55, '22 Oz. ปั่น': 60 } },
-            { id: 23, name: 'ชาเขียว (ไม่กลิ่นมะลิ)', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 24, name: 'ชาเขียวลาเต้ มะพร้าว', prices: { '16 Oz.': 45, '22 Oz. เย็น': 55, '22 Oz. ปั่น': 60 } },
-            { id: 25, name: 'ชาเขียวมะนาว', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 26, name: 'ชามะนาว', prices: { '16 Oz.': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
-            { id: 27, name: 'ชาพีช', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 28, name: 'ชามะลิ', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
-            { id: 29, name: 'ชาลิ้นจี่', prices: { '16 Oz.': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 20, name: 'ชาไทย (ไต้หวัน)', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 21, name: 'ชาไทย (ใบชา)', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 22, name: 'ชาไทย ลาเต้ มะพร้าว', prices: { '16 Oz. เย็น': 45, '22 Oz. เย็น': 55, '22 Oz. ปั่น': 60 } },
+            { id: 23, name: 'ชาเขียว (ไม่กลิ่นมะลิ)', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 24, name: 'ชาเขียวลาเต้ มะพร้าว', prices: { '16 Oz. เย็น': 45, '22 Oz. เย็น': 55, '22 Oz. ปั่น': 60 } },
+            { id: 25, name: 'ชาเขียวมะนาว', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 26, name: 'ชามะนาว', prices: { '16 Oz. เย็น': 30, '22 Oz. เย็น': 40, '22 Oz. ปั่น': 45 } },
+            { id: 27, name: 'ชาพีช', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 28, name: 'ชามะลิ', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
+            { id: 29, name: 'ชาลิ้นจี่', prices: { '16 Oz. เย็น': 35, '22 Oz. เย็น': 45, '22 Oz. ปั่น': 50 } },
         ];
         
         const matchaMenuData = [
@@ -306,8 +306,8 @@
         ];
 
         const smoothieYogurtData = [
-            { id: -301, name: 'กีวี่', prices: { '16 Oz. ปั่น': 50, '22 Oz. ปั่น': 60 } },
-            { id: -302, name: 'สตอเบอร์รี่', prices: { '16 Oz. ปั่น': 50, '22 Oz. ปั่น': 60 } },
+            { id: -301, name: 'กีวี่', prices: { '16 Oz เย็น. ปั่น': 50, '22 Oz. ปั่น': 60 } },
+            { id: -302, name: 'สตอเบอร์รี่', prices: { '16 Oz เย็น. ปั่น': 50, '22 Oz. ปั่น': 60 } },
             { id: -303, name: 'พีช', prices: { '16 Oz. ปั่น': 50, '22 Oz. ปั่น': 60 } },
             { id: -304, name: 'บลูเบอร์รี่', prices: { '16 Oz. ปั่น': 55, '22 Oz. ปั่น': 65 } },
             { id: -305, name: 'มิกซ์เบอร์รี่', prices: { '16 Oz. ปั่น': 55, '22 Oz. ปั่น': 65 } },
@@ -865,3 +865,4 @@
     </script>
 </body>
 </html>
+
