--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 
                 <div class="w-full p-2 border-t pt-2">
                     <p class="text-base text-gray-700 font-semibold">
-                        ชื่อบัญชี: <span class="font-bold text-gray-900">น.ส.นฤตญา นาเมืองรักษ์</span>
+                        ชื่อบัญชี: <span class="font-bold text-gray-900">น.ส.นฤญา นาเมืองรักษ์</span>
                     </p>
                 </div>
             </div>
@@ -865,4 +865,5 @@
     </script>
 </body>
 </html>
+
 
