--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
         // รวมเมนูทั้งหมด
         const allMenuData = [...menuData, ...matchaMenuData, ...coffeeMenuData, ...fruitSmoothieData, ...smoothieYogurtData];
-        const sweetnessOptions = ['100%', '75%', '50%', '25%'];
+        const sweetnessOptions = ['100%', '75%', '50%', '25%','0%'];
 
         // 🔥 Firebase Global Variables 🔥
         let currentOrder = [];
@@ -1056,3 +1056,4 @@
     </script>
 </body>
 </html>
+
