--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
             
             if (isPickup) {
                  // If address is empty, ask for confirmation to treat it as 'Pickup'
-                 if (!confirm("คุณไม่ได้กรอกที่อยู่ จะถือเป็น 'แขวนหน้าตึก' ใช่หรือไม่? (กด OK เพื่อยืนยัน)")) { 
+                 if (!confirm("คุณไม่ได้กรอกที่อยู่ จะถือเป็น 'รับเองที่ร้าน' ใช่หรือไม่? (กด OK เพื่อยืนยัน)")) { 
                      // If user presses Cancel, stop the submission
                      return; 
                  }
@@ -932,7 +932,7 @@
             db.collection("orders").add({ 
                 items: currentOrder,
                 total: orderTotal,
-                address: address || 'แขวนหน้าตึก',
+                address: address || 'รับเองที่ร้าน',
                 notes: notes, 
                 status: 'คิว',
                 placedAt: firebase.firestore.FieldValue.serverTimestamp(), // ใช้เวลาจาก Server
@@ -943,7 +943,7 @@
                      id: docRef.id, 
                      items: [...currentOrder],
                      total: orderTotal,
-                     address: address || 'แขวนหน้าตึก',
+                     address: address || 'รับเองที่ร้าน',
                      notes: notes, 
                      sourceTag: orderSourceTag // Store source tag for sharing/local display
                 };
