--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         
         // --- CUSTOMIZABLE LINE LINK ---
         // ** เปลี่ยน 'YOUR_LINE_ID' เป็น Line ID ของร้านคุณ หรือ 'oa_ID' ถ้าใช้ Line OA Link **
-        const LINE_LINK = 'https://line.me/ti/p/~YOUR_LINE_ID'; 
+        const LINE_LINK = 'https://line.me/ti/p/~khamphi295083'; 
 
         let lastCommittedOrder = null;
         let isOwnerLoggedIn = false; 
@@ -1197,3 +1197,4 @@
     </script>
 </body>
 </html>
+
