--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@
         
         // --- CUSTOMIZABLE LINE LINK ---
         // ** เปลี่ยน 'YOUR_LINE_ID' เป็น Line ID ของร้านคุณ หรือ 'oa_ID' ถ้าใช้ Line OA Link **
-        const LINE_LINK = 'https://line.me/ti/p/~khamphi295083'; 
+       // ⚠️ ต้องมี @ นำหน้า ID ร้านค้าของคุณ
+const LINE_LINK = 'https://line.me/R/ti/p/@khamphi295083';
 
         let lastCommittedOrder = null;
         let isOwnerLoggedIn = false; 
@@ -1197,4 +1198,5 @@
     </script>
 </body>
 </html>
+
 
