--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         // --- CUSTOMIZABLE LINE LINK ---
         // ** เปลี่ยน 'YOUR_LINE_ID' เป็น Line ID ของร้านคุณ หรือ 'oa_ID' ถ้าใช้ Line OA Link **
        // ⚠️ ต้องมี @ นำหน้า ID ร้านค้าของคุณ
-const LINE_LINK = 'https://line.me/R/ti/p/@khamphi295083';
+const LINE_LINK = 'https://line.me/R/ti/p/khamphi295083';
 
         let lastCommittedOrder = null;
         let isOwnerLoggedIn = false; 
@@ -1194,6 +1194,7 @@ const LINE_LINK = 'https://line.me/R/ti/p/@khamphi295083';
     </script>
 </body>
 </html>
+
 
 
 
