--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         // --- CUSTOMIZABLE LINE LINK ---
         // ** เปลี่ยน 'YOUR_LINE_ID' เป็น Line ID ของร้านคุณ หรือ 'oa_ID' ถ้าใช้ Line OA Link **
         // ใช้รูปแบบ R/ti/p/@ID เพื่อให้เป็น Universal Link ที่ดีที่สุด
-        const LINE_LINK = 'https://line.me/R/ti/p/@khamphi295083'; 
+        const LINE_LINK = 'https://line.me/R/ti/p/@nan570402'; 
 
         let lastCommittedOrder = null;
         let isOwnerLoggedIn = false; 
@@ -1208,3 +1208,4 @@
     </script>
 </body>
 </html>
+
