--- a/index.html
+++ b/index.html
@@ -507,31 +507,33 @@
         }
 
         /**
-         * คัดลอกเลขออเดอร์ไปยังคลิปบอร์ดและเปิดแอป Line/โทรออก 
+         * 🔥 UPDATED: คัดลอกเลขออเดอร์ไปยังคลิปบอร์ดและเปิดแอป Line/โทรออก พร้อมหน่วงเวลา 🔥
          */
         function copyAndOpenLine(orderId, contactLink, buttonText) {
             const shortOrderId = `#${orderId.substring(0, 8)}`; // #c4ga3DW4
             
             // 1. คัดลอกเลขออเดอร์ไปยังคลิปบอร์ด
-            if (navigator.clipboard && navigator.clipboard.writeText) {
-                navigator.clipboard.writeText(shortOrderId)
-                    .then(() => {
-                        console.log(`Copied Order ID: ${shortOrderId}`);
-                        // ไม่แสดง alert ถ้าเป็นการโทรออก
-                        if (buttonText !== '📞 โทรออก') {
-                             alert(`คัดลอกเลขออเดอร์ ${shortOrderId} แล้ว! (โปรดวางในช่องค้นหา Line)`);
-                        }
-                    })
-                    .catch(err => {
-                        console.error('Could not copy text: ', err);
-                        alert(`ไม่สามารถคัดลอกเลขออเดอร์ ${shortOrderId} ได้ (กรุณาจด/คัดลอกด้วยตนเอง)`);
-                    });
-            } else {
-                alert(`เบราว์เซอร์ไม่รองรับการคัดลอกอัตโนมัติ (กรุณาจดเลขออเดอร์: ${shortOrderId})`);
-            }
-            
-            // 2. เปิดลิงก์ติดต่อ Line/โทรออก
-            window.open(contactLink, '_blank');
+            const copyPromise = navigator.clipboard && navigator.clipboard.writeText
+                ? navigator.clipboard.writeText(shortOrderId).then(() => {
+                    console.log(`Copied Order ID: ${shortOrderId}`);
+                    if (buttonText !== '📞 โทรออก') {
+                        alert(`คัดลอกเลขออเดอร์ ${shortOrderId} แล้ว! (โปรดวางในช่องค้นหา Line)`);
+                    }
+                }).catch(err => {
+                    console.error('Could not copy text: ', err);
+                    alert(`ไม่สามารถคัดลอกเลขออเดอร์ ${shortOrderId} ได้ (กรุณาจด/คัดลอกด้วยตนเอง)`);
+                })
+                : new Promise(resolve => {
+                    alert(`เบราว์เซอร์ไม่รองรับการคัดลอกอัตโนมัติ (กรุณาจดเลขออเดอร์: ${shortOrderId})`);
+                    resolve();
+                });
+
+            // 2. เปิดลิงก์ติดต่อ Line/โทรออกหลังจากคัดลอกเสร็จ (พร้อมหน่วงเวลา 200ms)
+            copyPromise.finally(() => {
+                setTimeout(() => {
+                    window.open(contactLink, '_blank');
+                }, 200); // หน่วงเวลา 200ms เพื่อเพิ่มโอกาสให้ Line เปิดสำเร็จ
+            });
         }
 
         // --- Date Helper Functions (คงเดิม) ---
